--- a/DummyDjango/aiquest/studymart/templates/ml/userInput.html
+++ b/DummyDjango/aiquest/studymart/templates/ml/userInput.html
@@ -49,7 +49,7 @@
     </div>
     <div class="body">
         <div class="productImg">
-            <img src="{% static 'image.jpg' %}" alt="" srcset="" style="width: 100%;">
+            <img src="{ % static 'css/knife.png' % }" alt="" srcset="" style="width: 100%;">
         </div>
         <div class="productDesc">
             <h4>American Knife</h4>
