--- a/DummyDjango/aiquest/studymart/templates/ml/chair.html
+++ b/DummyDjango/aiquest/studymart/templates/ml/chair.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{%static 'css/forms.css'%}">
     <link rel="stylesheet" href="{%static 'bootstrap/css/bootstrap.min.css'%}">
-    <title>Document</title>
+    <title>Chair Information</title>
 </head>
 <style>
 
@@ -40,11 +40,11 @@
     </div>
     <div class="body">
         <div class="productImg">
-            <img src="{%static 'assets/images/knife.png'%}" alt="" srcset="" style="width: 100%;">
+            <img src="{%static 'assets/images/chair.png'%}" alt="" srcset="" style="width: 100%;">
         </div>
         <div class="productDesc">
-            <h4>American Knife</h4>
-            <h5>Price: $300</h5>
+            <h4>European Chair</h4>
+            <h5>Price: $1500</h5>
             <button class="btn btn-primary">Add to Cart</button>
         </div>
         <hr>
