--- a/DummyDjango/aiquest/studymart/templates/blogs/index.html
+++ b/DummyDjango/aiquest/studymart/templates/blogs/index.html
@@ -57,7 +57,7 @@
                         <a class="nav-link" href="category.html">Category</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="products.html">Products</a>
+                        <a class="nav-link" href="{% url 'products' %}">Products</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="clients.html">Client</a>
