--- a/DummyDjango/aiquest/studymart/templates/blogs/products.html
+++ b/DummyDjango/aiquest/studymart/templates/blogs/products.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
+      {%load static%}
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,20 +16,20 @@
       <!-- owl carousel style -->
       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.2.4/assets/owl.carousel.min.css" />
       <!-- bootstrap css -->
-      <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+      <link rel="stylesheet" type="text/css" href="{%static 'css/bootstrap.min.css'%}">
       <!-- style css -->
-      <link rel="stylesheet" type="text/css" href="css/style.css">
+      <link rel="stylesheet" type="text/css" href="{%static 'css/style.css'%}">
       <!-- Responsive-->
-      <link rel="stylesheet" href="css/responsive.css">
+      <link rel="stylesheet" href="{%static 'css/responsive.css'%}">
       <!-- fevicon -->
-      <link rel="icon" href="images/fevicon.png" type="image/gif" />
+      <link rel="icon" href="{%static 'images/fevicon.png' %}" type="image/gif" />
       <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+      <link rel="stylesheet" href="{%static 'css/jquery.mCustomScrollbar.min.css'%}">
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <!-- owl stylesheets --> 
-      <link rel="stylesheet" href="css/owl.carousel.min.css">
-      <link rel="stylesheet" href="css/owl.theme.default.min.css">
+      <link rel="stylesheet" href="{%static 'css/owl.carousel.min.css' %}">
+      <!-- <link rel="stylesheet" href="{%static 'css/owl.theme.default.min.css' %}"> -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
    </head>
    <body>
@@ -50,13 +51,13 @@
                <div class="collapse navbar-collapse" id="navbarsExample01">
                   <ul class="navbar-nav mr-auto">
                      <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="{% url 'index' %}">Home</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="category.html">Category</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="products.html">Products</a>
+                        <a class="nav-link" href="{% url 'products' %}">Products</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="clients.html">Client</a>
@@ -80,17 +81,17 @@
                   <div class="col-sm-5">
                      <div class="feature_box">
                         <h1 class="readable_text">Readable content of</h1>
-                        <div><img src="images/img-7.png" class="image_7"></div>
+                        <div><img src="{%static 'images/img-7.png'%}" class="image_7"></div>
                      </div>
                      <div class="feature_box_1">
                         <h1 class="readable_text">Readable content of</h1>
-                        <div><img src="images/img-7.png" class="image_7"></div>
+                        <div><img src="{%static 'images/img-7.png'%}" class="image_7"></div>
                      </div>
                   </div>
                   <div class="col-sm-7">
                      <div class="feature_box_2">
                         <h1 class="readable_text">Readable content of</h1>
-                        <div><img src="images/img-8.png" class="image_8"></div>
+                        <div><img src="{%static 'images/img-8.png'%}" class="image_8"></div>
                         <div class="seemore_bt"><a href="#">see More</a></div>
                      </div>
                   </div>
@@ -121,10 +122,10 @@
                      <p class="call_text"><a href="#">demo@gmail.com</a></p>
                      <div class="social_icon">
                         <ul>
-                           <li><a href="#"><img src="images/fb-icon.png"></a></li>
-                           <li><a href="#"><img src="images/twitter-icon.png"></a></li>
-                           <li><a href="#"><img src="images/linkedin-icon.png"></a></li>
-                           <li><a href="#"><img src="images/instagram-icon.png"></a></li>
+                           <li><a href="#"><img src="{%static 'images/fb-icon.png'%}"></a></li>
+                           <li><a href="#"><img src="{%static 'images/twitter-icon.png'%}"></a></li>
+                           <li><a href="#"><img src="{%static 'images/linkedin-icon.png'%}"></a></li>
+                           <li><a href="#"><img src="{%static 'images/instagram-icon.png'%}"></a></li>
                         </ul>
                      </div>
                   </div>
@@ -137,23 +138,23 @@
          </div>
       </div>
       <!-- footer section end -->
-      <!-- Javascript files-->
-      <script src="js/jquery.min.js"></script>
-      <script src="js/popper.min.js"></script>
-      <script src="js/bootstrap.bundle.min.js"></script>
-      <script src="js/jquery-3.0.0.min.js"></script>
-      <script src="js/plugin.js"></script>
+     <!-- Javascript files-->
+      <script src="{%static 'js/jquery.min.js'%}"></script>
+      <script src="{%static 'js/popper.min.js'%}"></script>
+      <script src="{%static 'js/bootstrap.bundle.min.js'%}"></script>
+      <script src="{%static 'js/jquery-3.0.0.min.js'%}"></script>
+      <script src="{%static 'js/plugin.js'%}"></script>
       <!-- sidebar -->
-      <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-      <script src="js/custom.js"></script>
+      <script src="{%static 'js/jquery.mCustomScrollbar.concat.min.js'%}"></script>
+      <script src="{%static 'js/custom.js'%}"></script>
       <!-- javascript --> 
-      <script src="js/owl.carousel.js"></script>
+      <!-- <script src="{%static 'js/owl.carousel.js'%}"></script> -->
       <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script> 
       <script type="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2//2.0.0-beta.2.4/owl.carousel.min.js"></script>
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
       <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-      <script src="../../assets/js/vendor/popper.min.js"></script>
-      <script src="../../dist/js/bootstrap.min.js"></script>
+      <script src="{%static 'js/popper.min.js'%}"></script>
+      <script src="{%static 'js/bootstrap.min.js'%}"></script>
    </body>
 </html>
 
