--- a/DummyDjango/aiquest/studymart/templates/ml/userInput.html
+++ b/DummyDjango/aiquest/studymart/templates/ml/userInput.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{%static 'css/forms.css'%}">
+    <link rel="stylesheet" href="{%static 'css/product.css'%}">
     <link rel="stylesheet" href="{%static 'bootstrap/css/bootstrap.min.css'%}">
-    <title>Document</title>
+    <title>Knife Information</title>
 </head>
 <style>
 
@@ -36,28 +37,66 @@
             </div>
         </nav>
     <div class="heading">
-        <h1>Review the product</h1>
+        <h1>Product Review</h1>
     </div>
     <div class="body">
-        <div class="productImg">
-            <img src="{%static 'assets/images/knife.png'%}" alt="" srcset="" style="width: 100%;">
-        </div>
-        <div class="productDesc">
-            <h4>American Knife</h4>
-            <h5>Price: $300</h5>
-            <button class="btn btn-primary">Add to Cart</button>
-        </div>
+
+        	<div class="container">
+                <div class="reviewArea">
+                    <form action="" method="POST" style="max-width: 600px;"> {% csrf_token %}
+                        {{form.as_p}}
+                        <input type="Submit" value="Submit Review" class="btn btn-primary">
+                    </form>
+                </div>
+                <div class="sentimentFeedback mt-3">
+                    <p>Your Review was {{output}}<br>Thank you for you comment.</p>
+                </div>
+                <div class="card">
+                    <div class="container-fliud">
+                        <div class="wrapper row">
+                            <div class="preview col-md-6">
+                                <div class="preview-pic tab-content">
+                                <div class="tab-pane active" id="pic-1"><img src="{%static 'assets/images/knife.png'%}" /></div>
+                                </div>
+                            </div>
+                            <div class="details col-md-6">
+                                <h3 class="product-title">American Knife</h3>
+                                <div class="rating">
+                                    <div class="stars">
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star"></span>
+                                    </div>
+                                    <span class="review-no">50 reviews</span>
+                                </div>
+                                <p class="product-description">A seat with a back on which one person sits,  having four legs and often having arms.</p>
+                                <h4 class="price">current price: <span>$60</span></h4>
+                                <p class="vote"><strong>91%</strong> of buyers enjoyed this product! <strong>(46 votes)</strong></p>
+                                <h5 class="sizes">sizes:
+                                    <span class="size" data-toggle="tooltip" title="small">s</span>
+                                    <span class="size" data-toggle="tooltip" title="medium">m</span>
+                                    <span class="size" data-toggle="tooltip" title="large">l</span>
+                                    <span class="size" data-toggle="tooltip" title="xtra large">xl</span>
+                                </h5>
+                                <h5 class="colors">colors:
+                                    <span class="color orange not-available" data-toggle="tooltip" title="Not In store"></span>
+                                    <span class="color green"></span>
+                                    <span class="color blue"></span>
+                                </h5>
+                                <div class="action">
+                                    <button class="add-to-cart btn btn-default" type="button">add to cart</button>
+                                    <button class="like btn btn-default" type="button"><span class="fa fa-heart"></span></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+	        </div>
+
         <hr>
-        <div class="reviewArea">
-          <form action="" method="POST" style="max-width: 600px;"> {% csrf_token %}
-            {{form.as_p}}
-            <input type="Submit" value="Submit Review" class="btn btn-primary">
-            
-          </form>
-        </div>
-        <div class="sentimentFeedback mt-3">
-          <p>Your Review was {{output}}, thank you for you comment.</p>
-        </div>
+        
     </div>
   </div>
         
