--- a/DummyDjango/aiquest/studymart/templates/ml/table.html
+++ b/DummyDjango/aiquest/studymart/templates/ml/table.html
@@ -36,11 +36,12 @@
                 </div>
             </div>
         </nav>
-    <div class="heading">
-        <h1>Review the product</h1>
-    </div>
+    
     <div class="body">
         	<div class="container">
+                <div class="heading">
+                    <h1>Product Review</h1>
+                </div>
                 <div class="reviewArea">
                     <form action="" method="POST" style="max-width: 600px;"> {% csrf_token %}
                         {{form.as_p}}
